Update CallableDemo to include description