@@ -19,10 +19,16 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class CallableDemo {
+    /**
+     * path 에서 word 가 나타난 횟수를 카운트
+     *
+     * @param word 카운트할 단어
+     * @param path 경로값
+     * @return path 에서 word 가 나타난 횟수
+     */
     public static long occurrences(String word, Path path) {
         try {
-            String contents = new String(Files.readAllBytes(path),
-                    StandardCharsets.UTF_8);
+            String contents = Files.readString(path);
             return Pattern.compile("\\PL+")
                     .splitAsStream(contents)
                     .filter(Predicate.isEqual(word))
@@ -32,6 +38,13 @@ public class CallableDemo {
         }
     }
 
+    /**
+     * 시작 경로를 받아서 하위 경로 엔트리 Set 리턴
+     *
+     * @param p 시작 경로를 받아서
+     * @return 하위 경로 모든 엔트리에 대한 Set 리턴
+     * @throws IOException Files 객체에 대한 파일입출력 예외
+     */
     public static Set<Path> descendants(Path p) throws IOException {
         try (Stream<Path> entries = Files.walk(p)) {
             return entries.collect(Collectors.toSet());
@@ -42,14 +55,12 @@ public class CallableDemo {
         String word = "String";
         Set<Path> paths = descendants(Paths.get("."));
         List<Callable<Long>> tasks = new ArrayList<>();
-        for (Path p : paths)
-            tasks.add(
-                    () -> {
-                        return occurrences(word, p);
-                    });
-        int processors = Runtime.getRuntime().availableProcessors();
-        ExecutorService executor = Executors.newFixedThreadPool(processors);
-        List<Future<Long>> results = executor.invokeAll(tasks);
+        for (Path p : paths) {
+            tasks.add(() -> occurrences(word, p));
+        }
+        int processors = Runtime.getRuntime().availableProcessors(); // 가용 프로세서 개수를 얻어서
+        ExecutorService executor = Executors.newFixedThreadPool(processors); // 프로세서 개수만큼 스레드풀을 생성
+        List<Future<Long>> results = executor.invokeAll(tasks); // 모든 테스크가 완료될 때까지 블록
         long total = 0;
         for (Future<Long> result : results) total += result.get();
         System.out.println("Occurrences of String: " + total);
@@ -62,7 +73,7 @@ public class CallableDemo {
                         if (occurrences(searchWord, p) > 0) return p;
                         else throw new RuntimeException();
                     });
-        Path found = executor.invokeAny(searchTasks);
+        Path found = executor.invokeAny(searchTasks); // 제출한 태스크 중 하나가 정상적으로 완료되면 즉시 반환
         System.out.println(found);
         executor.shutdown();
     }
